--- a/01-INTRO/Agentes/Agentes.ipynb
+++ b/01-INTRO/Agentes/Agentes.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# <font color='blue'>Data Science Academy</font>\n",
     "# <font color='blue'>Introdução à Inteligência Artificial</font>\n",
@@ -35,9 +33,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: grid in /Users/dmpm/opt/anaconda3/lib/python3.7/site-packages (0.7.1)\r\n",
-      "Requirement already satisfied: argparse in /Users/dmpm/opt/anaconda3/lib/python3.7/site-packages (from grid) (1.4.0)\r\n",
-      "Requirement already satisfied: numpy in /Users/dmpm/opt/anaconda3/lib/python3.7/site-packages (from grid) (1.17.2)\r\n"
+      "Requirement already satisfied: grid in /Users/dmpm/opt/anaconda3/lib/python3.7/site-packages (0.7.1)\n",
+      "Requirement already satisfied: argparse in /Users/dmpm/opt/anaconda3/lib/python3.7/site-packages (from grid) (1.4.0)\n",
+      "Requirement already satisfied: numpy in /Users/dmpm/opt/anaconda3/lib/python3.7/site-packages (from grid) (1.17.2)\n"
      ]
     }
    ],
@@ -47,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,9 +305,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
