--- a/04-DL/28-Exercicio9.ipynb
+++ b/04-DL/28-Exercicio9.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Versão da Linguagem Python Usada Neste Jupyter Notebook: 3.7.6\n"
+      "Versão da Linguagem Python Usada Neste Jupyter Notebook: 3.9.13\n"
      ]
     }
    ],
@@ -44,10 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -56,7 +54,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1471,9 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1873,9 +1869,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1931,9 +1925,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1978,9 +1970,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2038,9 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2067,9 +2055,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2156,7 +2142,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2170,9 +2156,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
